[package]
name = "totp"
version = "0.2.1"
edition = "2021"

authors = ["Stipe Kotarac <stipe@kotarac.net>"]
license = "MIT"
description = "CLI tool for generating TOTP codes."
homepage = "https://github.com/kotarac/totp"
repository = "https://github.com/kotarac/totp"

[dependencies]
base32 = "0.5.1"
oath = "0.1.4"
